--- a/src/app/dashboard/main/main.component.scss
+++ b/src/app/dashboard/main/main.component.scss
@@ -111,7 +111,7 @@
     margin: 8px;
     height: 140px;
   }  
-  .tour-guide{    
+  .navigation{    
     background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3)30%, rgba(255, 255, 255, 0.5) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftourguide.jpg?alt=media&token=6330abb3-166b-40d5-ac69-c7da1fd141d6);
     background-size: cover;
     margin: 8px;
@@ -184,7 +184,7 @@
   .departure{
     height: 112px;  
   }  
-  .tour-guide{    
+  .navigation{    
     height: 112px;       
   }
   .itinerary{   
@@ -236,7 +236,7 @@
   .departure{
     height: 80px; 
   }  
-  .tour-guide{    
+  .navigation{    
     height: 80px;      
   }
   .itinerary{   
