--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -1,17 +1,24 @@
 div.content {
-    text-align: left;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    line-height: 24px;
-    font-weight: normal;
-    color: #4A4A4A;  
-    background-color: white;    
+  text-align: left;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  line-height: 24px;
+  font-weight: normal;
+  color: #4A4A4A;    
+  margin: 0px 12px; 
 }
+
+hr {  
+  border: 0;
+  border-bottom: 1px dashed #ccc;
+  background: #999;      
+}
+
 
 div.introduction{    
     background-image: url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/restaurant%2Fbackground.jpg?alt=media&token=73399ecd-5f47-40e0-81e0-c423b711fecc);
     background-repeat: no-repeat;  
-    margin: 0px 35px 0px 35px; 
+    margin: 0px 12px ; 
     width: auto;
 	height: auto;
 	max-width: 100%;
@@ -21,7 +28,7 @@ div.introduction{
 
 div.contain{
     display:inline-block;
-    margin: 40px 0px 40px 200px;
+    margin: 40px 0px ;
     width: auto;
 	height: auto;
 	max-width: 100%;
@@ -73,21 +80,12 @@ ul{
 }
 
 div h1{
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 11pt;
-    line-height: 25px;
-    font-weight: normal;
-    color: #603A0A;
-    background-color: #D5D5D5;
-    display: block;
-    margin: 0px 0px 0px 35px;   
-    max-width: 800px;
-    min-width: 350px;
-    padding-top: 0px;
-    padding-right: 5px;
-    padding-bottom: 0px;
-    padding-left: 5px;
-    position: relative;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: normal;
+  color: #603A0A;
+  background-color: #D5D5D5;    
 }
 
 @media only screen and (max-width:1200px) {}
@@ -97,8 +95,9 @@ div h1{
     width: calc(100% );       
     margin: 20px 35px 0px 35px;    
   }
-  div h1{     
-    margin: 0px 0px 0px 0px;      
+  div h1{   
+    width: calc(100%-24px);  
+    margin: 12px;      
   }
   div.picture{     
     width: calc(100% );     
@@ -120,36 +119,32 @@ div h1{
 
 @media only screen and (max-width:480px) {
   div.contain{    
-    margin: 0px 0px  0px  0px;      
-  }
-  div.introduction{      
-    margin: 0px 5px 0px 5px;   
-  }
+    margin: 20px 12px; 
+    line-height: 16px;      
+  }  
+   
   gallery{        
     height: 250px;   
-    margin: 0px 5px 0px 5px; 
+    margin: 0px 12px; 
   }
-  div h1{     
-    margin: 0px 0px 0px 0px;      
+  div h1{   
+    width: calc(100% - 24px);  
+    margin: 12px;      
   }
   div.menu{       
-    margin: 20px 5px 0px 5px;    
+    margin: 20px 12px 4px 12px;    
   }
   div.picture{  
          
-    margin: 20px 5px 5px 5px; 
+    margin: 20px 12px 4px 12px; 
   }
-  div.contain{    
-    margin: 20px 0px 0px 0px; 
-    line-height: 16px;      
-  }  
 }
 @media only screen and (max-width:319px) {
   div.picture{             
    background-image: none;
 }
   img.meal{
-    margin: 5px 5px 5px  5px; 
+    margin: 12px; 
     width: auto;
     height: auto;
     max-width: 100%;
