--- a/src/app/tollbooth/tollbooth.component.html
+++ b/src/app/tollbooth/tollbooth.component.html
@@ -1,8 +1,9 @@
 <div class="content" [@place]="isDivVisible">
     <div class="introduction">
-  
+        <h1>{{'ticket.ticket_price'|translate}}</h1>
+        <br>
       <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#B2B2B2">
-        <caption>{{'ticket.ticket_price'|translate}}</caption>
+       
         <tr>
           <th width="40%">{{'ticket.classification'|translate}}</th>
           <td>{{'ticket.weekdays'|translate}}</td>
